# cloud-infrastructure-platform

./: .gitignore  LICENSE  README.md
.claude/: CLAUDE.md  settings.local.json
.claude/memory/: Execution_Feasibility_Analysis.md  MANDATORY-SESSION-START-PROTOCOL.md  SELF-VERIFICATION-PROTOCOL.md  Session-1-Prompt.md  Session-2-Prompt.3.1.IMPROVED.md  Session-2-Prompt.3.1.md  Session-2-Prompt.md  Session-2.1.md  Session-3-Completion-Summary.md  Session-3-Failure-Analysis-And-Commitments.md  Session-3-Init-Prompt.md  Session-3-Prompt.3.1.md  Session-3-Prompt.md  Session-3.1.md  Session-4.md  (+4 more)
deploy/: README.md
tools/cli/: =1.7.0  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
tools/cli/src/: __init__.py
tools/cli/src/cloud_cli/: __init__.py  main.py  protocols.py
tools/cli/src/cloud_cli/commands/: __init__.py  config_cmd.py  deploy_cmd.py  deploy_stack_cmd.py  destroy_cmd.py  destroy_stack_cmd.py  environment_cmd.py  init_cmd.py  list_cmd.py  logs_cmd.py  rollback_cmd.py  stack_cmd.py  status_cmd.py  template_cmd.py  validate_cmd.py
tools/cli/src/cloud_cli/parser/: __init__.py  parameter_extractor.py  typescript_parser.py
tools/cli/src/cloud_cli/utils/: console_utils.py  path_utils.py
tools/cli/tests/: __init__.py  test_cli_smoke.py  test_cli_v4_1_fixes.py
tools/cli/tests/test_commands/: test_init.py
tools/cli/tests/test_parser/: __init__.py  test_parameter_extractor.py  test_typescript_parser.py
tools/cli/tests/test_utils/: test_deployment_id.py
tools/cli/tests/test_validation/: __init__.py  test_manifest_validator.py
(+324 files in other folders)
